<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WeatherAPP</string>

    <string name="login">用户登录</string>
    <string name="input_phone_num_prompt">用户名:</string>
    <string name="input_phone_num_prompt_hint">请输入用户名</string>
    <string name="input_password_prompt">密  码:</string>
    <string name="input_password_prompt_hint">请输入密码</string>
    <string name="quick_login" tools:ignore="ExtraTranslation">登录</string>
    <string name="resetPassword">重置密码</string>
    <string name="register_">注册</string>
    <string name="forget_password">  忘记密码?</string>

    <string name="register">用户注册</string>
    <string name="input_password_sure">确认密码:</string>
    <string name="back">返回</string>
    <string name="main_title">天气质量查询</string>
    <string name="select">查询</string>
</resources>
