<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_background_color">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/denglu" />


    <TextView
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_30"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_120"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_18" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_150"
        android:orientation="vertical"
        android:paddingLeft="@dimen/sp_36"
        android:paddingRight="@dimen/sp_36">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dimen_60"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:gravity="right"
                android:text="@string/input_phone_num_prompt"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

            <EditText
                android:id="@+id/et_input_name"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_10"
                android:background="@color/transparent"
                android:digits="1234567890"
                android:focusable="true"
                android:hint="@string/input_phone_num_prompt_hint"
                android:inputType="phone|number"
                android:maxLength="13"
                android:maxLines="1"
                android:paddingLeft="0dp"
                android:paddingRight="0dp"
                android:singleLine="true" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pwd_show"
                android:layout_width="@dimen/dimen_60"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="right"
                android:text="@string/input_password_prompt"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />


            <EditText
                android:id="@+id/et_input_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dimen_10"
                android:layout_toLeftOf="@id/pwd_show"
                android:background="@color/transparent"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:hint="@string/input_password_prompt_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingLeft="0dp"
                android:singleLine="true" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_50"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btLogin"
                android:layout_width="@dimen/dp_70"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quick_login"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_16" />

            <Button
                android:id="@+id/btRegister"
                android:layout_width="@dimen/dp_70"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_100"
                android:gravity="center"
                android:text="@string/register_"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_15" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
